# chess-aces

./: README.md
phase_1/eval/channing/: README.md
phase_1/eval/girard/: Makefile  README.md  docker-compose.yml
phase_1/eval/kane/: Dockerfile  README.md  docker-compose.yaml
phase_1/eval/livingston/: Makefile  README.md
phase_1/eval/ovington/: README.md  docker-compose.yml
phase_1/eval/pierrepont/: Makefile  README.md  pierrepont-gdb.sc
phase_1/eval/quincy/: README.md  docker-compose.yml
phase_1/eval/remsen/: Makefile  README.md  docker-compose.yaml
phase_1/eval/smith/: Makefile  README.md
phase_1/eval/tillary/: README.md  docker-compose.yml
phase_1/eval/union/: Dockerfile  Makefile  README.md  docker-compose.yaml
phase_1/eval/verona/: README.md
phase_1/eval/walker/: Makefile  README.md
phase_1/eval/xenia/: .gitignore  README.md  WRITEUP.md  docker-compose.yml  make_variants.sh
phase_1/eval/york/: .gitignore  Makefile  README.md  docker-compose.yml
phase_1/example/adams/: README.md
phase_1/example/bryant/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml
phase_1/example/evarts/: README.md
phase_1/example/franklin/: Makefile  README.md
phase_1/example/hamlin/: .gitignore  Guardfile  Makefile  README.md  docker-compose.yml
phase_1/example/irving/: Makefile  README.md  docker-compose.yaml
phase_1/example/jackson/: Makefile  README.md
phase_1/example/nevins/: Makefile  README.md
phase_2/eval/garfield/: README.md  chess_challenge.yaml  docker-compose.yaml
phase_2/eval/hackensack/: README.md  chess_challenge.yaml  docker-compose.yaml
phase_2/eval/iroquois/: README-dist.md  README.md  chess_challenge.yaml  docker-compose.yml
phase_2/eval/jaeger/: .gitignore  .gitlab-ci.yml  README.md  bugs.md  build.sh  chess_challenge.yaml  docker-compose.yml
phase_2/eval/kensington/: .gitignore  README-dist.md  README.md  chess_challenge.yaml  docker-compose.yml
phase_2/eval/lamartine/: README-dist.md  README.md  chess_challenge.yaml  docker-compose.yml
phase_2/eval/morton/: README.md  chess_challenge.yaml  docker-compose.yaml
phase_2/eval/newbury/: README.md  chess_challenge.yaml  docker-compose.yml
phase_2/eval/olmstead/: .gitignore  README.md  challenge.yaml  chess_challenge.yaml  docker-compose.yaml
phase_2/eval/pitsmoor/: .gitignore  README.md  challenge.yaml  chess_challenge.yaml  (+1 more)
phase_3/eval/inagua/reference_patch/ngircd-26.1/src/ipaddr/: Makefile  Makefile.am  Makefile.in
phase_3/example/foster/challenge/mosquitto/apps/mosquitto_ctrl/: CMakeLists.txt  Makefile  dynsec.c  dynsec_client.c  mosquitto_ctrl.c
phase_3/example/foster/challenge/mosquitto/apps/mosquitto_passwd/: CMakeLists.txt  Makefile  mosquitto_passwd.c
(+7153 files in other folders)
